Fixed jumping nav, nav hiding behind content

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -762,7 +762,10 @@ body.navbar--visible .navbar-burger span:nth-child(3) {
 @media all and (max-width: 759px) {
   body.navbar--visible .header {
     position: fixed;
-    border-bottom: 1px solid red;
+    z-index: 5000;
+  }
+  body.navbar--visible .main {
+    padding-top: 4.5rem;
   }
   body.navbar--visible .navbar .navbar-menu {
     display: block;
