--- a/resources/scss/partials/header.scss
+++ b/resources/scss/partials/header.scss
@@ -210,7 +210,10 @@ body.navbar--visible {
     body.navbar--visible {
         .header {
             position: fixed;
-            border-bottom: 1px solid red;;
+            z-index: 5000;
+        }
+        .main {
+            padding-top: $header-height;
         }
 
         .navbar .navbar-menu {
